fixed profile text overflow

--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -1238,7 +1238,7 @@
 
   #team .team-left {
     position: absolute;
-    width: 500px;
+    width: 315px;
     height: 473px;
     top: 65px;
   }
